--- a/Certification App/Src/Ask_Ques_Answers.fx.yaml
+++ b/Certification App/Src/Ask_Ques_Answers.fx.yaml
@@ -2469,13 +2469,12 @@ Ask_Ques_Answers As screen:
             =Refresh('Certification History');
             Refresh(Certifications);
             //Refresh(Notifications);
-            Refresh(Documents);
+            //Refresh(Documents);
             Refresh('BU-CertificationList');
             Refresh(CertificationRequest);
             Refresh('BU-List');
             Refresh(CertificationOrder);
             Refresh(AnswerList);
-            Refresh(Question_Answers);
             Refresh('CertificationApp-Security');
             Refresh(NotificationList_CertificationApp);
             Refresh(Question_Answers);
