--- a/Certification App/Src/CertificationRecommendationScreen.fx.yaml
+++ b/Certification App/Src/CertificationRecommendationScreen.fx.yaml
@@ -1546,13 +1546,13 @@ CertificationRecommendationScreen As screen:
                             OnSelect: |-
                                 =Refresh('Certification History');
                                 Refresh(Certifications);
-                                Refresh(Documents);
+                                //Refresh(Notifications);
+                                //Refresh(Documents);
                                 Refresh('BU-CertificationList');
                                 Refresh(CertificationRequest);
                                 Refresh('BU-List');
                                 Refresh(CertificationOrder);
                                 Refresh(AnswerList);
-                                Refresh(Question_Answers);
                                 Refresh('CertificationApp-Security');
                                 Refresh(NotificationList_CertificationApp);
                                 Refresh(Question_Answers);
@@ -1560,6 +1560,7 @@ CertificationRecommendationScreen As screen:
                                 Refresh(AnswersList_Admin);
                                 Refresh('Location List_Certification App');
                                 Refresh('Target List');
+                                Refresh(QuestionList);
                             Tooltip: ="Refresh"
                             Width: =21
                             X: =780
@@ -2050,13 +2051,12 @@ CertificationRecommendationScreen As screen:
                                 =Refresh('Certification History');
                                 Refresh(Certifications);
                                 //Refresh(Notifications);
-                                Refresh(Documents);
+                                //Refresh(Documents);
                                 Refresh('BU-CertificationList');
                                 Refresh(CertificationRequest);
                                 Refresh('BU-List');
                                 Refresh(CertificationOrder);
                                 Refresh(AnswerList);
-                                Refresh(Question_Answers);
                                 Refresh('CertificationApp-Security');
                                 Refresh(NotificationList_CertificationApp);
                                 Refresh(Question_Answers);
