--- a/Certification App/Src/AskQuestion_Admin.fx.yaml
+++ b/Certification App/Src/AskQuestion_Admin.fx.yaml
@@ -2924,13 +2924,12 @@ AskQuestion_Admin As screen:
             =Refresh('Certification History');
             Refresh(Certifications);
             //Refresh(Notifications);
-            Refresh(Documents);
+            //Refresh(Documents);
             Refresh('BU-CertificationList');
             Refresh(CertificationRequest);
             Refresh('BU-List');
             Refresh(CertificationOrder);
             Refresh(AnswerList);
-            Refresh(Question_Answers);
             Refresh('CertificationApp-Security');
             Refresh(NotificationList_CertificationApp);
             Refresh(Question_Answers);
