--- a/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
+++ b/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
@@ -2431,13 +2431,12 @@ Ask_Oues_Ans_Admin As screen:
             =Refresh('Certification History');
             Refresh(Certifications);
             //Refresh(Notifications);
-            Refresh(Documents);
+            //Refresh(Documents);
             Refresh('BU-CertificationList');
             Refresh(CertificationRequest);
             Refresh('BU-List');
             Refresh(CertificationOrder);
             Refresh(AnswerList);
-            Refresh(Question_Answers);
             Refresh('CertificationApp-Security');
             Refresh(NotificationList_CertificationApp);
             Refresh(Question_Answers);
