--- a/Certification App/Src/New Certifications request approval.fx.yaml
+++ b/Certification App/Src/New Certifications request approval.fx.yaml
@@ -1964,13 +1964,12 @@
                                             =Refresh('Certification History');
                                             Refresh(Certifications);
                                             //Refresh(Notifications);
-                                            Refresh(Documents);
+                                            //Refresh(Documents);
                                             Refresh('BU-CertificationList');
                                             Refresh(CertificationRequest);
                                             Refresh('BU-List');
                                             Refresh(CertificationOrder);
                                             Refresh(AnswerList);
-                                            Refresh(Question_Answers);
                                             Refresh('CertificationApp-Security');
                                             Refresh(NotificationList_CertificationApp);
                                             Refresh(Question_Answers);
