--- a/Certification App/Src/Admin BU-Wise-Records.fx.yaml
+++ b/Certification App/Src/Admin BU-Wise-Records.fx.yaml
@@ -1213,11 +1213,8 @@
                                 Color: =RGBA(0, 0, 0, 1)
                                 Height: =18
                                 Icon: =Icon.Reload
-                                OnSelect: |-
-                                    =Refresh('Certification History');
-                                    Refresh(Certifications);
-                                    //Refresh(Notifications);
-                                    //Refresh(Documents);
+                                OnSelect: |
+                                    =Refresh(Certifications);
                                     Refresh('BU-CertificationList');
                                     Refresh(CertificationRequest);
                                     Refresh('BU-List');
@@ -1225,7 +1222,6 @@
                                     Refresh(AnswerList);
                                     Refresh('CertificationApp-Security');
                                     Refresh(NotificationList_CertificationApp);
-                                    Refresh(Question_Answers);
                                     Refresh(QuestionList_Admin);
                                     Refresh(AnswersList_Admin);
                                     Refresh('Location List_Certification App');
@@ -1900,11 +1896,8 @@
                                 Color: =RGBA(0, 0, 0, 1)
                                 Height: =21
                                 Icon: =Icon.Reload
-                                OnSelect: |-
-                                    =Refresh('Certification History');
-                                    Refresh(Certifications);
-                                    //Refresh(Notifications);
-                                    //Refresh(Documents);
+                                OnSelect: |
+                                    =Refresh(Certifications);
                                     Refresh('BU-CertificationList');
                                     Refresh(CertificationRequest);
                                     Refresh('BU-List');
@@ -1912,7 +1905,6 @@
                                     Refresh(AnswerList);
                                     Refresh('CertificationApp-Security');
                                     Refresh(NotificationList_CertificationApp);
-                                    Refresh(Question_Answers);
                                     Refresh(QuestionList_Admin);
                                     Refresh(AnswersList_Admin);
                                     Refresh('Location List_Certification App');
