--- a/Certification App/Src/Admin dashBoard.fx.yaml
+++ b/Certification App/Src/Admin dashBoard.fx.yaml
@@ -826,11 +826,8 @@
                         Icon8 As icon.Reload:
                             Height: =21
                             Icon: =Icon.Reload
-                            OnSelect: |-
-                                =Refresh('Certification History');
-                                Refresh(Certifications);
-                                //Refresh(Notifications);
-                                //Refresh(Documents);
+                            OnSelect: |
+                                =Refresh(Certifications);
                                 Refresh('BU-CertificationList');
                                 Refresh(CertificationRequest);
                                 Refresh('BU-List');
@@ -838,7 +835,6 @@
                                 Refresh(AnswerList);
                                 Refresh('CertificationApp-Security');
                                 Refresh(NotificationList_CertificationApp);
-                                Refresh(Question_Answers);
                                 Refresh(QuestionList_Admin);
                                 Refresh(AnswersList_Admin);
                                 Refresh('Location List_Certification App');
@@ -5138,11 +5134,8 @@
         Color: =RGBA(0, 0, 0, 1)
         Height: =21
         Icon: =Icon.Reload
-        OnSelect: |-
-            =Refresh('Certification History');
-            Refresh(Certifications);
-            //Refresh(Notifications);
-            //Refresh(Documents);
+        OnSelect: |
+            =Refresh(Certifications);
             Refresh('BU-CertificationList');
             Refresh(CertificationRequest);
             Refresh('BU-List');
@@ -5150,7 +5143,6 @@
             Refresh(AnswerList);
             Refresh('CertificationApp-Security');
             Refresh(NotificationList_CertificationApp);
-            Refresh(Question_Answers);
             Refresh(QuestionList_Admin);
             Refresh(AnswersList_Admin);
             Refresh('Location List_Certification App');
