--- a/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
+++ b/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
@@ -2427,11 +2427,8 @@ Ask_Oues_Ans_Admin As screen:
         Color: =RGBA(0, 0, 0, 1)
         Height: =21
         Icon: =Icon.Reload
-        OnSelect: |-
-            =Refresh('Certification History');
-            Refresh(Certifications);
-            //Refresh(Notifications);
-            //Refresh(Documents);
+        OnSelect: |
+            =Refresh(Certifications);
             Refresh('BU-CertificationList');
             Refresh(CertificationRequest);
             Refresh('BU-List');
@@ -2439,7 +2436,6 @@ Ask_Oues_Ans_Admin As screen:
             Refresh(AnswerList);
             Refresh('CertificationApp-Security');
             Refresh(NotificationList_CertificationApp);
-            Refresh(Question_Answers);
             Refresh(QuestionList_Admin);
             Refresh(AnswersList_Admin);
             Refresh('Location List_Certification App');
