--- a/Certification App/Src/CertificationRecommendationScreen.fx.yaml
+++ b/Certification App/Src/CertificationRecommendationScreen.fx.yaml
@@ -1543,11 +1543,8 @@ CertificationRecommendationScreen As screen:
                             Color: =RGBA(255, 255, 255, 1)
                             Height: =21
                             Icon: =Icon.Reload
-                            OnSelect: |-
-                                =Refresh('Certification History');
-                                Refresh(Certifications);
-                                //Refresh(Notifications);
-                                //Refresh(Documents);
+                            OnSelect: |
+                                =Refresh(Certifications);
                                 Refresh('BU-CertificationList');
                                 Refresh(CertificationRequest);
                                 Refresh('BU-List');
@@ -1555,7 +1552,6 @@ CertificationRecommendationScreen As screen:
                                 Refresh(AnswerList);
                                 Refresh('CertificationApp-Security');
                                 Refresh(NotificationList_CertificationApp);
-                                Refresh(Question_Answers);
                                 Refresh(QuestionList_Admin);
                                 Refresh(AnswersList_Admin);
                                 Refresh('Location List_Certification App');
@@ -2047,11 +2043,8 @@ CertificationRecommendationScreen As screen:
                             Color: =RGBA(0, 0, 0, 1)
                             Height: =21
                             Icon: =Icon.Reload
-                            OnSelect: |-
-                                =Refresh('Certification History');
-                                Refresh(Certifications);
-                                //Refresh(Notifications);
-                                //Refresh(Documents);
+                            OnSelect: |
+                                =Refresh(Certifications);
                                 Refresh('BU-CertificationList');
                                 Refresh(CertificationRequest);
                                 Refresh('BU-List');
@@ -2059,7 +2052,6 @@ CertificationRecommendationScreen As screen:
                                 Refresh(AnswerList);
                                 Refresh('CertificationApp-Security');
                                 Refresh(NotificationList_CertificationApp);
-                                Refresh(Question_Answers);
                                 Refresh(QuestionList_Admin);
                                 Refresh(AnswersList_Admin);
                                 Refresh('Location List_Certification App');
