--- a/Certification App/Src/Responsive Certification Status Screen.fx.yaml
+++ b/Certification App/Src/Responsive Certification Status Screen.fx.yaml
@@ -6637,11 +6637,8 @@
         Color: =RGBA(0, 0, 0, 1)
         Height: =21
         Icon: =Icon.Reload
-        OnSelect: |-
-            =Refresh('Certification History');
-            Refresh(Certifications);
-            //Refresh(Notifications);
-            //Refresh(Documents);
+        OnSelect: |
+            =Refresh(Certifications);
             Refresh('BU-CertificationList');
             Refresh(CertificationRequest);
             Refresh('BU-List');
@@ -6649,7 +6646,6 @@
             Refresh(AnswerList);
             Refresh('CertificationApp-Security');
             Refresh(NotificationList_CertificationApp);
-            Refresh(Question_Answers);
             Refresh(QuestionList_Admin);
             Refresh(AnswersList_Admin);
             Refresh('Location List_Certification App');
