--- a/Certification App/Src/Responsive Home Screen.fx.yaml
+++ b/Certification App/Src/Responsive Home Screen.fx.yaml
@@ -1438,11 +1438,8 @@
                             Color: =RGBA(0, 0, 0, 1)
                             Height: =25
                             Icon: =Icon.Reload
-                            OnSelect: |-
-                                =Refresh('Certification History');
-                                Refresh(Certifications);
-                                //Refresh(Notifications);
-                                //Refresh(Documents);
+                            OnSelect: |
+                                =Refresh(Certifications);
                                 Refresh('BU-CertificationList');
                                 Refresh(CertificationRequest);
                                 Refresh('BU-List');
@@ -1450,7 +1447,6 @@
                                 Refresh(AnswerList);
                                 Refresh('CertificationApp-Security');
                                 Refresh(NotificationList_CertificationApp);
-                                Refresh(Question_Answers);
                                 Refresh(QuestionList_Admin);
                                 Refresh(AnswersList_Admin);
                                 Refresh('Location List_Certification App');
